# ntapi

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
src/: .gitattributes  ctypes.rs  lib.rs  macros.rs  ntapi_base.rs  ntdbg.rs  ntexapi.rs  ntgdi.rs  ntioapi.rs  ntkeapi.rs  ntldr.rs  ntlpcapi.rs  ntmisc.rs  ntmmapi.rs  ntnls.rs  ntobapi.rs  ntpebteb.rs  ntpfapi.rs  ntpnpapi.rs  ntpoapi.rs  ntpsapi.rs  ntregapi.rs  ntrtl.rs  ntsam.rs  ntseapi.rs  ntsmss.rs  nttmapi.rs  nttp.rs  ntwow64.rs  ntxcapi.rs  ntzwapi.rs  string.rs  subprocesstag.rs  winapi_local.rs  winsta.rs
src/winapi_local/: um.rs
src/winapi_local/um/: mod.rs  winioctl.rs  winnt.rs
src/windows_local/: mod.rs
src/windows_local/shared/: ntdef.rs
src/windows_local/um/: winioctl.rs  winnt.rs
tests/: layout_aarch64.rs  layout_x86.rs  layout_x86_64.rs
