[package]
name = "ntapi"
version = "0.4.1"
authors = ["MSxDOS <melcodos@gmail.com>"]
description = "FFI bindings for Native API"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/ntapi/*/x86_64-pc-windows-msvc/ntapi/"
repository = "https://github.com/MSxDOS/ntapi"
readme = "README.md"
categories = ["external-ffi-bindings", "no-std", "os::windows-apis"]
keywords = ["windows", "ffi", "ntapi", "native", "win32"]
include = [
  "src/**/*",
  "Cargo.toml",
  "build.rs",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
  "aarch64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-pc-windows-msvc",
]

[dependencies.windows-sys]
version = "0.48.0"
features = [
  'Win32_Devices_DeviceAndDriverInstallation',
  'Win32_Foundation',
  'Win32_Networking_WinSock',
  'Win32_Security_Authentication_Identity',
  'Win32_Security',
  'Win32_Storage_FileSystem',
  'Win32_System_Diagnostics_Debug',
  'Win32_System_Diagnostics_Etw',
  'Win32_System_Ioctl',
  'Win32_System_JobObjects',
  'Win32_System_Kernel',
  'Win32_System_Memory',
  'Win32_System_Performance_HardwareCounterProfiling',
  'Win32_System_Power',
  'Win32_System_SystemInformation',
  'Win32_System_SystemServices',
  'Win32_System_Threading',
  'Win32_System_WindowsProgramming',
  'Win32_UI_WindowsAndMessaging',
]

[features]
default = ["user"]
func-types = []
impl-default = []
user = []
kernel = []
